stop name overflowing in player table

--- a/client/css/interface.less
+++ b/client/css/interface.less
@@ -129,14 +129,14 @@
 			position: relative;
 			width: 38%;
 			display: inline-block;
+			white-space: nowrap;
+			overflow: hidden;
 
 			.name {
 				display: inline-block;
 				height: 100%;
 				vertical-align: top;
 				line-height: 2;
-				width: 74%;
-				overflow: hidden;
 			}
 
 			.icon {
